--- a/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
@@ -6,7 +6,7 @@
   --ent-drawer-border-color: var(--ent-border-color);
   --ent-drawer-border-width: var(--ent-border-width);
   --ent-drawer-border-style: var(--ent-border-style);
-  --ent-drawer-width: 20rem;
+  --ent-drawer-width: auto;
 }
 
 .ent-drawer-container {
@@ -17,12 +17,13 @@
     position: absolute;
     bottom: 0;
     top: 0;
-    transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+ 
     background-color: var(--ent-drawer-bg);
     z-index: var(--ent-drawer-z-index);
     box-shadow: var(--ent-drawer-box-shadow);
     width: var(--ent-drawer-width);
-  
+
+   
     &.ent-drawer--direction-start {
 
       border-inline-end: var(--ent-drawer-border-width) var(--ent-drawer-border-style) var(--ent-drawer-border-color);
@@ -30,19 +31,17 @@
       &.ent-drawer--mode-behavior {
         &.ent-drawer--open {
           inset-inline-start: 0;
-
+          transition: inset-inline-start 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
             margin-inline-start: var(--ent-drawer-width);;
-            transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           }
         }
 
         &.ent-drawer--close {
           inset-inline-start: calc(-1 * var(--ent-drawer-width));
-
+          transition: inset-inline-start 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
             margin-inline-start: 0;
-            transition: all 225ms cubic-bezier(0, 0, .2, 1) 0ms;
           }
         }
       }
@@ -50,17 +49,15 @@
       &.ent-drawer--mode-overlay {
         &.ent-drawer--open {
           inset-inline-start: 0;
-
+          transition: inset-inline-start 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
-            transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           }
         }
 
         &.ent-drawer--close {
           inset-inline-start: calc(-1 * var(--ent-drawer-width));
-
+          transition: inset-inline-start 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
-            transition: all 225ms cubic-bezier(0, 0, .2, 1) 0ms;
           }
         }
       }
@@ -73,19 +70,17 @@
       &.ent-drawer--mode-behavior {
         &.ent-drawer--open {
           inset-inline-end: 0;
-
+          transition: inset-inline-end 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
             margin-inline-end: var(--ent-drawer-width);;
-            transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           }
         }
 
         &.ent-drawer--close {
           inset-inline-end: calc(-1 * var(--ent-drawer-width));
-
+          transition: inset-inline-end 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
             margin-inline-end: 0;
-            transition: all 225ms cubic-bezier(0, 0, .2, 1) 0ms;
           }
         }
       }
@@ -93,17 +88,15 @@
       &.ent-drawer--mode-overlay {
         &.ent-drawer--open {
           inset-inline-end: 0;
-
+          transition: inset-inline-end 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
-            transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           }
         }
 
         &.ent-drawer--close {
           inset-inline-end: calc(-1 * var(--ent-drawer-width));
-
+          transition: inset-inline-end 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
           & ~ div:not(.ent-drawer) {
-            transition: all 225ms cubic-bezier(0, 0, .2, 1) 0ms;
           }
         }
       }
